tm/tests/snapshots/horizon_close__backlog_after_close.snap
---
source: tm/tests/horizon_close.rs
expression: "text(&store, BACKLOG)"
---
# Untied
- [ ] 2 30m Insurance claim for the bike  ^a1
- [ ] 1 Pick up package  win:2026-09-07T09:00/21:00 dur:20m ^a3
- [?] 2 15m Ask Prof. Lee about the reading group  on-event:reply/7d waiting:2026-09-05 ^a4

# Dated, far out
- [ ] 5 10b Workshop paper draft  @O2 due:2026-11-20 #soundcode ^d2

## series:cell-bio
- [x] 4 4b Cell Biology vol. 1 ^c1
- [ ] 4 4b Cell Biology vol. 2 ^c2
- [ ] 4 4b Cell Biology vol. 3 ^c3

# Overdue
- [ ] 4 6b CS 234 pset 2                @O3 due:2026-09-11T23:59 max:2b/d ^d1
